<resources>
    <string name="app_name">骑阅</string>
    <!-- 命名规范:模块名_类型(hint或text)_功能 -->
    <string name="phone_account">手机 / 骑阅号</string>
    <string name="please_fill_pwd">输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_by_third_platform">第三方账号登录</string>
    <string name="please_fill_invite_code">填写邀请码</string>
    <string name="next">下一步</string>
    <string name="please_fill_phone_number">输入手机号</string>
    <string name="please_fill_identify_code">输入验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="set_password">设置密码</string>
    <string name="password_limit">6~16个字符</string>
    <string name="password_confirm">确认密码</string>
    <string name="complete">完成</string>

    <string name="main_text_map">阅图</string>
    <string name="main_text_circle">阅圈</string>
    <string name="main_text_mine">我的</string>

    <string-array name="circle_tab_title">
        <item>最新</item>
        <item>关注</item>
    </string-array>
    <string-array name="scrollview_tab_title">
        <item>登录</item>
        <item>注册</item>
    </string-array>
    <string-array name="sex_choices">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="tags_label">
        <item>随性</item>
        <item>喜欢简单</item>
        <item>理想主义</item>
        <item>热血</item>
        <item>安静</item>
        <item>萌萌哒</item>
        <item>女汉子</item>
        <item>强迫症</item>
    </string-array>
    <string-array name="careers">
        <item>学生</item>
        <item>IT/互联网/通信</item>
        <item>媒体/公关</item>
        <item>法律</item>
        <item>金融</item>
        <item>咨询</item>
        <item>文化/艺术</item>
        <item>影视/娱乐</item>
        <item>医药/健康</item>
        <item>房地产/建筑</item>
        <item>教育/科研</item>
        <item>能源/环保</item>
        <item>政府机构</item>
        <item>其他</item>
    </string-array>

    <string name="nonsupport_message_type">不支持的消息类型</string>

    <string name="details">详情</string>
    <string name="invite_user_id">邀请人的骑阅号</string>
    <string name="avatar">头像</string>
    <string name="label">标签</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="knew">知道了</string>
    <string name="confirm_user_id">确定 骑阅号，保存后无法修改</string>
    <string name="server_error_fail">服务器异常，请稍后重试</string>
    <string name="read_circle">阅圈</string>
    <string name="resend">重新发送</string>
    <string name="phone_rrid_cannot_null">手机号/骑阅号不能为空</string>
    <string name="pwd_cannot_null">密码不能为空</string>
    <string name="please_fill_correct_phone_number">请填写11位正确手机号</string>
    <string name="profile">我的</string>
    <string name="post_moment">发个阅圈</string>
    <string name="query_2_quit_edit">您确定要退出编辑？</string>
    <string name="query_2_logout">您确定要退出登录？</string>
    <string name="transition_image">transition_image</string>
    <string name="send">发送</string>

    <string name="career">职业</string>
    <string name="hometown">家乡</string>
    <string name="locale">所在地</string>
    <string name="school">毕业/在读学校</string>
    <string name="phone_number">手机号</string>
    <string name="birthday">生日</string>
    <string name="signature">个性签名</string>
    <string name="sex">性别</string>
    <string name="nick">昵称</string>
    <string name="nick_tips">建议使用真实姓名</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="network_error_timeout">网络连接超时</string>
    <string name="network_error_fail">网络请求失败</string>

    <string name="source_file_not_exist">源文件不存在</string>
    <string name="destination_dir_not_exist">目标目录不存在</string>
    <string name="filename_null">文件名为null</string>
    <string name="save_image_to">图片已保存到 %1$s</string>
    <string name="my_circle">我的阅圈</string>
    <string name="thumbs_up_user">点赞用户</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="personality_map">个性地图</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="share_text">发现一款非常棒的App「骑阅」，骑行者都认可的骑行爱好者社区，旅途分享，精彩无限！这是我的骑阅号：%1$s 诚邀您加入！推荐~：https://www.pgyer.com/RideRead_Ad</string>
    <string name="message">消息</string>
    <string name="sure2unfollow">确定要取消关注吗？</string>
    <string name="unsupport_message_type">暂不支持此消息类型</string>


</resources>
