<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_common_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="40dp"
              android:paddingRight="40dp"
              android:paddingTop="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        android:textColor="@color/gray_text"
        android:textSize="16sp"/>

    <View
        style="@style/edt_line_style"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/edt_password"
        style="@style/edt_common_style"
        android:layout_marginTop="8dp"
        android:hint="@string/please_fill_pwd"
        android:inputType="textPassword"
        android:maxLength="20"
        android:minEms="3"/>

    <View
        style="@style/edt_line_style"/>

    <EditText
        android:id="@+id/edt_password_confirm"
        style="@style/edt_common_style"
        android:layout_marginTop="8dp"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:maxLength="16"
        />

    <View
        style="@style/edt_line_style"/>


    <Button
        android:id="@+id/btn_next"
        style="@style/btn_auth_style"
        android:text="@string/next"/>


</LinearLayout>
