<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_common_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="40dp"
              android:paddingRight="40dp"
              android:paddingTop="40dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_invite_code"
        android:textColor="@color/gray_text"
        android:textSize="16sp"/>

    <View
        style="@style/edt_line_style"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/edt_invite_id"
        style="@style/edt_common_style"
        android:hint="@string/invite_user_id"
        android:maxLength="20"/>

    <View
        style="@style/edt_line_style"/>


    <Button
        android:id="@+id/btn_next"
        style="@style/btn_auth_style"
        android:text="@string/complete"/>

</LinearLayout>
