<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fresco="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include
        layout="@layout/include_simple_topbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/def_top_bar_height"
        android:fadeScrollbars="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_bg"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <FrameLayout
                android:id="@+id/fl_avatar"
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="80dp"
                    android:text="@string/avatar"
                    />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/img_avatar"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dip"
                    fresco:placeholderImage="@drawable/ic_launcher"
                    fresco:roundAsCircle="true"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_nick"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/nick"
                    />


                <TextView
                    android:id="@+id/tv_nickname"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    android:gravity="right"
                    android:hint="@string/nick_tips"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_sex"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="4dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/sex"
                    />


                <TextView
                    android:id="@+id/tv_sex"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    tools:text="男"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_label"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/label"
                    />


                <TextView
                    android:id="@+id/tv_label"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_signature"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="4dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/signature"
                    />


                <TextView
                    android:id="@+id/tv_signature"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    android:ellipsize="end"
                    android:maxWidth="200dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_birthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="4dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/birthday"
                    />


                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/phone_number"
                    />


                <TextView
                    android:id="@+id/tv_phone"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_school"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/school"
                    />


                <TextView
                    android:id="@+id/tv_school"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_locale"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/locale"
                    />


                <TextView
                    android:id="@+id/tv_locale"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_hometown"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/hometown"
                    />


                <TextView
                    android:id="@+id/tv_hometown"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_job"
                android:layout_width="match_parent"
                android:layout_height="@dimen/def_item_height"
                android:layout_marginTop="0.5dp">

                <TextView
                    style="@style/common_icon_item_style"
                    android:layout_height="match_parent"
                    android:text="@string/career"
                    />

                <TextView
                    android:id="@+id/tv_job"
                    style="@style/def_text_small_style"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="36dp"
                    />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>