<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/include_code_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_common_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="60dp"
              android:paddingRight="60dp"
              android:paddingTop="40dp">

    <EditText
        android:id="@+id/edt_phone"
        style="@style/edt_common_style"
        android:hint="@string/please_fill_phone_number"
        android:inputType="number"
        android:maxLength="20"/>

    <View
        style="@style/edt_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_code"
            style="@style/edt_common_style"
            android:layout_marginTop="0dp"
            android:layout_weight="1.0"
            android:hint="@string/please_fill_identify_code"
            android:inputType="number"
            android:maxLength="16"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="32dp"
            android:background="@color/gray_hint"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"/>

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:hint="@string/send_identify_code"
            android:maxLength="16"
            android:textColor="@color/gray_text"
            />
    </LinearLayout>


    <View
        style="@style/edt_line_style"/>


    <Button
        android:id="@+id/btn_code_next"
        style="@style/btn_auth_style"
        android:text="@string/next"/>

    <TextView
        android:id="@+id/tv_agree_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/gray_text"
        android:textSize="12sp"
        tools:text="注册即视为同意骑阅用户协议"/>


</LinearLayout>
