<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_common_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="40dp"
              android:paddingRight="40dp"
              android:paddingTop="40dp">

    <EditText
        android:id="@+id/edt_phone"
        style="@style/edt_common_style"
        android:hint="@string/please_fill_phone_number"
        android:maxLength="20"
        android:minEms="3"/>

    <View
        style="@style/edt_line_style"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/edt_code"
            style="@style/edt_common_style"
            android:layout_weight="1.0"
            android:hint="@string/please_fill_identify_code"
            android:maxLength="16"
            />

        <view
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:layout_weight="1.0"
            android:hint="@string/please_fill_identify_code"
            android:maxLength="16"
            />
    </LinearLayout>


    <View
        style="@style/edt_line_style"/>


    <Button
        android:id="@+id/btn_next"
        style="@style/btn_auth_style"
        android:text="@string/next"/>


</LinearLayout>
